--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,20 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" class="dark">
+
 <head>
   <meta charset="utf-8">
-  <title>GamifiedPortfolio</title>
+  <title>Aditya Gurav | Gamified Portfolio</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="icon.ico">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@400;700&family=Segoe+UI:wght@400;700&display=swap"
+    rel="stylesheet">
 </head>
-<body>
+
+<body class="bg-dark-bg">
   <app-root></app-root>
 </body>
+
 </html>
